welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: '(' expected but identifier found.
while fini=false {
      ^BDR2:20: error: illegal start of simple expression
	}
        ^